fix: Word-break-Problem endgültig erledigt. Firefox, IE 11 und Edge teilen die Wörter nach Silben. Chrome schneidet das Wort ab, aber nur dann, wenn es zu lange für eine Zeile ist. Ansonsten wird das ganze Wort in neue Zeile verschoben. feat: Zusätzliche Klassen für word-break und elipsis. Dadurch kan man das "word-wrap"-Verhalten schnell auf beliebege Elemente anwenden.

--- a/bin/css/style.css
+++ b/bin/css/style.css
@@ -619,18 +619,38 @@ h1.page-header-text-title {
 }
 
 
+/*************************/
 /* hyphenate, word break */
-/* ANMERKUNG */
-/*word-break: break-all; mit Absicht ausgeshaltet. */
-/* -ms-word-break damit in IE 11 funktioniert. */
-/* Nur bei EDGE passt nicht. Wenn break-word Standard wird, */
-/* dann sollte alles passen */
+/*************************/
 h1, h2, h3, h4, h5, h6 {
-    -ms-word-break: break-all;
-    word-break: break-word; /* Non standard for webkit */
-    -webkit-hyphens: auto;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: normal;
+    word-break: normal;
+    word-break: break-word;
+    -ms-hyphens: auto;
     -moz-hyphens: auto;
+    -webkit-hyphens: auto;
     hyphens: auto;
+}
+
+.word-wrap,
+.word-break {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: normal;
+    word-break: normal;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 /** promo slider dots
